--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Dennis sida!</title>
+		<title>PeterNilsson.org</title>
 	</head>
 
 	<body>
-		<p>Test!</p>
+		<h1>välkommen till Peters sida på nätet!</h1>
+		<img src="http://natgeo.se/files/bonnier-ngm/imagecache/630x420/pictures/cat-quiz_0.jpg"/>
 	</body>
 </html>
