--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 
 	<body>
 		<h1>välkommen till Peters sida på nätet!</h1>
-		<img src="http://natgeo.se/files/bonnier-ngm/imagecache/630x420/pictures/cat-quiz_0.jpg" />
+		<img style="width:500px;height:500px;" src="http://natgeo.se/files/bonnier-ngm/imagecache/630x420/pictures/cat-quiz_0.jpg" />
 	</body>
 </html>
