--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>PeterNilsson.org</title>
+		<title>Dennis Nilsson</title>
 	</head>
 
 	<body>
-		<h1>välkommen till Peters sida på nätet!</h1>
-		<img style="width:500px;height:500px;" src="http://natgeo.se/files/bonnier-ngm/imagecache/630x420/pictures/cat-quiz_0.jpg" />
+		
 	</body>
 </html>
