--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 	<body style="background-color:blue;">
 		<h1>Denna sida tillhör Dennis Nilsson. Han är asgrym.</h1>
 		<h3>Han kunde programmera den här sidan själv!</h3>
+		<img src="välkommen.png" />
 	</body>
 </html>
