--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 		<h1>Denna sida tillhör Dennis Nilsson. Han är asgrym.</h1>
 		<h3>Han kunde programmera den här sidan själv!</h3>
 		<img src="välkommen.png" />
-		<img style="float:left;" src="jag.png" />
+		<img style="float:right;" src="jag.png" />
 	</body>
 </html>
