--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<h1>Denna sida tillhör Dennis Nilsson. Han är asgrym.</h1>
 		<h3>Han kunde programmera den här sidan själv!</h3>
 		<img style="float:left;width:1000px;" src="välkommen.png" />
+		<img src="door.gif" />
 		<img style="float:right;" src="jag.png" />
 	</body>
 </html>
