--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Dennis Nilsson</title>
 	</head>
 
-	<body style="background:Space-Background;">
+	<body style="background-image:Space-Background;">
 		<h1>Denna sida tillhör Dennis Nilsson. Han är asgrym.</h1>
 		<h3>Han kunde programmera den här sidan själv!</h3>
 	</body>
