--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body style="background-image:url(space_background.png);">
-		<h1>Denna sida tillhör Dennis Nilsson. Han är asgrym.</h1>
-		<h3>Han kunde programmera den här sidan själv!</h3>
+		<h1 style="color:white;">Denna sida tillhör Dennis Nilsson. Han är asgrym.</h1>
+		<h3 style="color:white;">Han kunde programmera den här sidan själv!</h3>
 	</body>
 </html>
