--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Dennis Nilsson</title>
+		<link type="text/css" rel="main" href="main.css"/>
+		<title>Guide to the war against the machines</title>
 	</head>
-
 	<body style="background-image:url(space_background.png);">
-		<h1 style="color:white;">Denna sida tillhör Dennis Nilsson. Han är asgrym.</h1>
-		<h3 style="color:white;">Han kunde programmera den här sidan själv!</h3>
+		<div #text_part></div>
 	</body>
 </html>
