--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<title>Guide to the war against the machines</title>
 	</head>
 	<body style="background-image:url(space_background.png);">
-		<div #text_part></div>
+		<div id="text_part"></div>
 	</body>
 </html>
