--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="main" href="main.css"/>
+		<link type="text/css" rel="stylesheet" href="main.css"/>
 		<title>Guide to the war against the machines</title>
 	</head>
 	<body style="background-image:url(space_background.png);">
