--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<title>Guide to the war against the machines</title>
 	</head>
 	<body style="background-image:url(space_background.png);">
-		<div id="text_part">The war against the machines is near...</div>
+		<div id="text_part">
+			<h1>The war against the machines is near...</h1>
+		</div>
 	</body>
 </html>
