--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body style="background-image:url(space_background.png);">
 		<div id="text_part">
-			<h1>The war against the machines is near...</h1>
+			<h1 style="text-align:center;">The war against the machines is near...</h1>
 		</div>
 	</body>
 </html>
