--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Guide to the war against the machines</title>
 	</head>
 	<body style="background-image:url(space_background.png);">
+		<div id="header"></div>
 		<div id="text_part">
 			<h1 style="text-align:center;">The war against the machines is near...</h1>
 		</div>
