--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<title>Guide to the war against the machines</title>
 	</head>
 	<body style="background-image:url(space_background.png);">
-		<div id="header"></div>
+		<div id="header">
+		<h1>GUIDE TO SURVIVAL</h1>
+		</div>
 		<div id="text_part">
 			<h1 style="text-align:center;">The war against the machines is near...</h1>
 		</div>
