--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body style="background-image:url(space_background.png);">
 		<div id="header">
-		<p style="top: 20px;">GUIDE TO SURVIVAL</p>
+		<p style="margin-top: 20px;">GUIDE TO SURVIVAL</p>
 		</div>
 		<div id="text_part">
 			<h1 style="text-align:center;">The war against the machines is near...</h1>
