--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<title>Guide to the war against the machines</title>
+		<title>The War against the Machines</title>
 	</head>
 	<body style="background-image:url(space_background.png);">
 		<div id="header">
