--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		</div>
 		<div id="text_part">
 			<h1 style="text-align:center;">The war against the machines is near...</h1>
+			<h6 style="text-align:center; color:black;">And we will probably lose...</h6>
 		</div>
 	</body>
 </html>
