--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<div id="text_part">
 			<h1 style="text-align:center;">The war against the machines is near...</h1>
 			<h6 style="text-align:center; color:black;">And we will probably lose...</h6>
+			<p>Welcome to theseconddennis.github.io, the home of Dennis' predictions of the war against the machines.</p>
 		</div>
 	</body>
 </html>
