--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<p style="margin-top: 32px;">GUIDE TO SURVIVAL</p>
 		</div>
 		<div id="text_part">
-			<h1 style="text-align:center;">The war against the machines is near...</h1>
-			<h6 style="text-align:center; color:black;">And we will probably lose...</h6>
+			<h1>The war against the machines is near...</h1>
+			<h6 style="color:black;">And we will probably lose...</h6>
 			<p>Welcome to theseconddennis.github.io, the home of Dennis' predictions of the war against the machines.</p>
 		</div>
 	</body>
