--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div id="text_part">
 			<h1>The war against the machines is near...</h1>
 			<h6 style="color:black;">And we will probably lose...</h6>
-			<p>Welcome to theseconddennis.github.io, the home of Dennis' predictions of the war against the machines.</p>
+			<h5>Welcome to theseconddennis.github.io, the home of Dennis' predictions of the war against the machines.</h5>
 		</div>
 	</body>
 </html>
