--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<h1>The war against the machines is near...</h1>
 			<h6 style="color:black;">And we will probably lose...</h6>
 			<h5>Welcome to theseconddennis.github.io, the home of Dennis' predictions of the war against the machines.</h5>
+			<img src="robot.gif"/>
 		</div>
 	</body>
 </html>
