--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 			<h1>The war against the machines is near...</h1>
 			<h6 style="color:black;">And we will probably lose...</h6>
 			<h5>Welcome to theseconddennis.github.io, the home of Dennis' predictions of the war against the machines.</h5>
-			<img style="margin-left: 150px;" src="robot.gif"/>
+			<img style="margin-left: 150px;" src="robot.gif" />
+			<img src="robot2.gif" />
 		</div>
 	</body>
 </html>
