--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<h5>Welcome to theseconddennis.github.io, the home of Dennis' predictions of the war against the machines.</h5>
 			<img style="margin-left: 150px;" src="robot.gif" />
 			<img src="robot2.gif" />
+			<h3 style="color:red">WE WILL DIE.<h3>
 		</div>
 	</body>
 </html>
