--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 			<h5>Welcome to theseconddennis.github.io, the home of Dennis' predictions of the war against the machines.</h5>
 			<img style="margin-left: 150px;" src="robot.gif" />
 			<img src="robot2.gif" />
-			<h3 style="color:red">WE WILL DIE.<h3>
+			<h2 style="color:red">WE WILL DIE.<h2>
+			<p>Probably all of us, but if we are lucky then some might survive.</p>
 		</div>
 	</body>
 </html>
