--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<img style="margin-left: 150px;" src="robot.gif" />
 			<img src="robot2.gif" />
 			<h2 style="color:red">WE WILL DIE.<h2>
-			<p>Probably all of us, but if we are lucky then some might survive.</p>
+			<h3>Probably all of us, but if we are lucky then some might survive.</p>
 		</div>
 	</body>
 </html>
