--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 			<img style="margin-left: 150px;" src="robot.gif" />
 			<img src="robot2.gif" />
 			<h2 style="color:red">WE WILL DIE.<h2>
-			<h3>Probably all of us, but if we are lucky then some might survive.</p>
+			<h3>Probably all of us, but if we are lucky then some might survive.</h3>
+			<p>If you read all info on this website your chance of survival may increase. But probably not. If it does it won't increase a lot.</p>
 		</div>
 	</body>
 </html>
