--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 			<h5>Welcome to theseconddennis.github.io, the home of Dennis' predictions of the war against the machines.</h5>
 			<img style="margin-left: 150px;" src="robot.gif" />
 			<img src="robot2.gif" />
-			<h2 style="color:red">WE WILL DIE.<h2>
+			<h2 style="color:red">WE WILL DIE.</h2>
 			<h3>Probably all of us, but if we are lucky then some might survive.</h3>
 			<p>If you read all info on this website your chance of survival may increase. But probably not. If it does it won't increase a lot.</p>
 			<p></p>
-			<h6>I will start off by telling you how it all probably will start. There isn't just one way.</h6>
+			<h4>I will start off by telling you how it all probably will start. There isn't just one way.</h6>
 		</div>
 	</body>
 </html>
