--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 			<h2 style="color:red">WE WILL DIE.</h2>
 			<h3>Probably all of us, but if we are lucky then some might survive.</h3>
 			<p>If you read all info on this website your chance of survival <em><strong>may</strong></em> increase. But probably not. If it does it won't increase a lot.</p>
-			<p></p>
+			<p> </p>
 			<h4>I will start off by telling you how it all probably will start. There isn't just one way.</h4>
+			<p> </p>
+			<h1>How the war will start. <strong>Way 1.</strong><h1>
 		</div>
 	</body>
 </html>
