--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<p> </p>
 			<h4>I will start off by telling you how it all probably will start. There isn't just one way.</h4>
 			<p> </p>
-			<h1>How the war will start. <strong>Way 1.</strong><h1>
+			<h1><span style="color:orange">How the war will start.</span> Way 1.<h1>
 		</div>
 	</body>
 </html>
