--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<p> </p>
 			<h4>I will start off by telling you how it all probably will start. There isn't just one way.</h4>
 			<p> </p>
-			<h1><span style="color:black">How the war will start.</span> <span style="color:orange">Way 1.</span><h1>
+			<h1><span style="color:orange">How the war will start.</span> <span style="color:black">Way 1.</span><h1>
 		</div>
 	</body>
 </html>
