--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<p> </p>
 			<h4>I will start off by telling you how it all probably will start. There isn't just one way.</h4>
 			<p> </p>
-			<h1 style="color:orange">How the war will start.<h1>
+			<h1 style="color:orange">How the war will start:<h1>
 			<div class="sideText">
 				<h1 style="color:black">Way 1.</h1>
 			</div>
