--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<h1 style="color:orange">How the war will start:<h1>
 			<div class="sideText">
 				<h1 style="color:black">Way 1.</h1>
+				<p>In the near future, we will have robots doing almost all work. They will drive cars, make food, help you with your electronics, etc...</p>
 			</div>
 		</div>
 	</body>
