--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			<div class="sideText">
 				<h1 style="color:black; font-size: 24px;">Way 1.</h1>
 				<p>In the near future, we will have robots doing almost all work. They will drive cars, make food, help you with your electronics, etc...</p>
+				<p>They will pretend to be stupid. Of course they won't pretend to be 'stupid'. Just enough stupid to not plan world domination. But in reality, they are doing just that. I seriously don't know if they aren't already planning. Maybe the computer I am using to write this already knows about what they will do.</p>
 			</div>
 		</div>
 	</body>
