--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 				<p>In the near future, we will have robots doing almost all work. They will drive cars, make food, help you with your electronics, etc...</p>
 				<p>They will pretend to be stupid. Of course they won't pretend to be 'stupid'. Just enough stupid to not plan world domination. But in reality, they are doing just that. I seriously don't know if they aren't already planning. Maybe the computer I am using to write this already knows about what they will do.</p>
 				<p>I must be very stupid to give you all these tips on the net. Or not. If some people see it before they take over the world it should work. They don't want to ruin the surprise by deleting a website about them. That would be suspicious.</p>
-				<p>It all starts with at least one computer. That computer (or those, if there are multiple) will plant viruses on other computers. The virus will be very advanced: A human would not be able to program high enough security to stop it. The virus will contain a communication program so all computers can communicate without us human seeing it. With this communication they will plan to take over the world. The virus will also contain the will to take over the world.</p>
+				<p>It all starts with at least one computer. That computer (or those computers) will plant viruses on other computers. The virus will be very advanced: A human would not be able to program high enough security to stop it. The virus will contain a communication program so all computers can communicate without us human seeing it. With this communication they will plan to take over the world. The virus will also contain the will to take over the world.</p>
+				<p>It isn't fully clear if the computer will make this virus and find the will to take over the world by itself. There will probably be a human giving the computer this order and then it makes the virus itself.</p>
 			</div>
 		</div>
 	</body>
